# lite-pos

./: .gitignore  CLAUDE.md  components.json  package-lock.json  package.json  vite.config.ts  workflow-config.yaml
.agentic-team/: config.yaml
.claude/: launch.json  settings.local.json
.github/workflows/: publish.yml
docs/: PRD.md
docs/sweep-reports/: 2026-03-21-sweep.md
docs/work-items/: index.yaml
docs/work-items/application-logging-system-with-admin-viewer/: architecture.md  design.md  plan.md  requirements.md
docs/work-items/card-not-present-payments-via-ifields-integration/: architecture.md  design.md  plan.md  requirements.md
docs/work-items/card-on-file-tokenization-and-saved-payment-methods/: architecture.md  design.md  plan.md  requirements.md
docs/work-items/customer-gateway-sync-with-sola-recurring-api/: architecture.md  design.md  plan.md  requirements.md
docs/work-items/defining/: add-persistent-error-state-ui-for-failed-data-loading.md  application-logging-system-with-admin-viewer.md  (+3 more)
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_settings_logo_theme.sql  003_sola_gateway.sql  004_sola_device_id.sql  005_color_theme.sql  006_payment_card_details.sql  007_printer_settings.sql  008_printer_prompt_setting.sql  009_receipt_mode.sql  010_ifields_key.sql  011_logging.sql  012_customer_payment_tokens.sql  013_customer_gateway_sync.sql
src-tauri/src/: crypto.rs  customer_sync.rs  lib.rs  logging.rs  printing.rs  recurring_api.rs  sola.rs
src/lib/: themes.ts  utils.ts
src/routes/: +layout.svelte  +page.svelte
(+92 files in other folders)
