[package]
name = "lite-pos"
version = "0.1.0"
description = "A cross-platform Point of Sale desktop application"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-http = "2"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.11", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Printing", "Win32_Graphics_Gdi", "Win32_Foundation"] }
